test/classes/initializers/generics/phase2-only-type-with-default.good
phase2-only-type-with-default.chpl:7: In initializer:
phase2-only-type-with-default.chpl:8: error: cannot assign to type field 't' during Phase 2 of initialization
